--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "sharks"
 version = "0.1.0"
 authors = ["Aitor Ruano <codearm@pm.me>"]
-description = "Fast, smanll and secure Shamir's Secret Sharing library crate"
+description = "Fast, small and secure Shamir's Secret Sharing library crate"
 homepage = "https://github.com/c0dearm/sharks"
 repository = "https://github.com/c0dearm/sharks"
 readme = "README.md"
