simplify rng usage, update tests, upgrade version to 0.4

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           command: check
 
-  test:
+  test-std:
     name: Test
     runs-on: ubuntu-latest
     steps:
@@ -30,6 +30,20 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+
+  test-nostd:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test --no-default-features
 
   format:
     name: Format
