--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sharks"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Aitor Ruano <codearm@pm.me>"]
 description = "Fast, small and secure Shamir's Secret Sharing library crate"
 homepage = "https://github.com/c0dearm/sharks"
@@ -19,10 +19,12 @@ codecov = { repository = "c0dearm/sharks" }
 [features]
 default = ["std"]
 std = ["rand/std"]
+fuzzing = ["std", "arbitrary"]
 
 [dependencies]
 rand = { version = "0.7", default-features = false }
 hashbrown = "0.7"
+arbitrary = {version = "0.4.2", features = ["derive"], optional = true}
 
 [dev-dependencies]
 criterion = "0.3"
