Add Zeroize crate to project behind a default feature flag
Closes https://github.com/c0dearm/sharks/issues/8

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,16 @@ codecov = { repository = "c0dearm/sharks" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-default = ["std"]
+default = ["std", "zeroize_memory"]
 std = ["rand/std", "rand/std_rng"]
 fuzzing = ["std", "arbitrary"]
+zeroize_memory = ["zeroize"]
 
 [dependencies]
 rand = { version = "0.8", default-features = false }
 hashbrown = "0.9"
 arbitrary = { version = "0.4.7", features = ["derive"], optional = true }
+zeroize = { version = "1.2.0", features = ["zeroize_derive"], optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
